// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton styles should render with circular styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-background-position: -8rem 0;
    background-position: -8rem 0;
  }

  50% {
    -webkit-background-position: calc(8rem + 100%) 0;
    background-position: calc(8rem + 100%) 0;
  }

  100% {
    -webkit-background-position: calc(8rem + 100%) 0;
    background-position: calc(8rem + 100%) 0;
  }
}

@keyframes animation-0 {
  0% {
    -webkit-background-position: -8rem 0;
    background-position: -8rem 0;
  }

  50% {
    -webkit-background-position: calc(8rem + 100%) 0;
    background-position: calc(8rem + 100%) 0;
  }

  100% {
    -webkit-background-position: calc(8rem + 100%) 0;
    background-position: calc(8rem + 100%) 0;
  }
}

.circuit-0[aria-busy='true'] {
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-1 {
  display: inline-block;
  line-height: 0;
  border-radius: 100%;
  background-color: var(--cui-bg-highlight);
  background-image: linear-gradient(
      90deg,
      var(--cui-bg-highlight),
      var(--cui-bg-subtle),
      var(--cui-bg-highlight)
    );
  -webkit-background-size: 8rem 100%;
  background-size: 8rem 100%;
  background-repeat: no-repeat;
  -webkit-animation: animation-0 3s ease-in-out infinite;
  animation: animation-0 3s ease-in-out infinite;
}

@media (prefers-reduced-motion: reduce) {
  .circuit-1 {
    -webkit-animation: none;
    animation: none;
  }
}

.circuit-1>* {
  visibility: hidden!important;
}

<div
  aria-busy="true"
  class="circuit-0"
>
  <span
    class="circuit-1"
  >
    <p>
      content
    </p>
  </span>
</div>
`;

exports[`Skeleton styles should render with loading styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-background-position: -8rem 0;
    background-position: -8rem 0;
  }

  50% {
    -webkit-background-position: calc(8rem + 100%) 0;
    background-position: calc(8rem + 100%) 0;
  }

  100% {
    -webkit-background-position: calc(8rem + 100%) 0;
    background-position: calc(8rem + 100%) 0;
  }
}

.circuit-0[aria-busy='true'] {
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-1 {
  display: inline-block;
  line-height: 0;
  border-radius: 8px;
  background-color: var(--cui-bg-highlight);
  background-image: linear-gradient(
      90deg,
      var(--cui-bg-highlight),
      var(--cui-bg-subtle),
      var(--cui-bg-highlight)
    );
  -webkit-background-size: 8rem 100%;
  background-size: 8rem 100%;
  background-repeat: no-repeat;
  -webkit-animation: animation-0 3s ease-in-out infinite;
  animation: animation-0 3s ease-in-out infinite;
}

@media (prefers-reduced-motion: reduce) {
  .circuit-1 {
    -webkit-animation: none;
    animation: none;
  }
}

.circuit-1>* {
  visibility: hidden!important;
}

<div
  aria-busy="true"
  class="circuit-0"
>
  <span
    class="circuit-1"
  >
    <p>
      content
    </p>
  </span>
</div>
`;
